# libtinyfseq

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.h.in  example.c  tinyfseq.c  tinyfseq.h
.github/workflows/: cmake.yml  fuzz.yml
fuzz/: TFChannelRange_read.c  TFCompressionBlock_read.c  TFHeader_read.c  TFVarHeader_read.c
test/: TFError_string.c  build.c
